--- a/springmvc_demo/src/main/webapp/WEB-INF/templates/index.html
+++ b/springmvc_demo/src/main/webapp/WEB-INF/templates/index.html
@@ -6,6 +6,13 @@
 </head>
 <body>
 <h1>index.html</h1>
-<a th:href="@{test/abc}">测试@RequestMapping标识的位置</a>
+<a th:href="@{test/abc}">测试@RequestMapping标识的位置</a><br>
+<a th:href="@{test/rest/czh/1}">测试@RequestMapping value属性值的占位符</a><br>
+<hr>
+<form th:action="@{param/servletAPI}" method="post">
+  用户名 :<input type="text" name="username"><br>
+  密码 :<input type="text" name="password"><br>
+  <input type="submit" value="登陆"><br>
+</form>
 </body>
 </html>
