--- a/springmvc_ajax/src/main/webapp/WEB-INF/templates/success.html
+++ b/springmvc_ajax/src/main/webapp/WEB-INF/templates/success.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>首页</title>
+    <title>成功</title>
 </head>
 <body>
-
+<h1>success.html</h1>
 </body>
 </html>
